Fix overflow scroll to just be over workspaces list, fix width stutter

--- a/client/web/src/enterprise/batches/create/workspaces-preview/WorkspacesPreview.module.scss
+++ b/client/web/src/enterprise/batches/create/workspaces-preview/WorkspacesPreview.module.scss
@@ -12,6 +12,7 @@
     // stylelint-disable-next-line declaration-property-unit-allowed-list
     width: 50px;
     margin-top: 2rem;
+    position: relative;
     * {
         position: absolute;
     }
